--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   http: ^0.12.0
   webview_flutter: ^0.3.19+7
+  fluttertoast: ^3.1.3
 
 dev_dependencies:
   flutter_test:
